[gd_scene load_steps=3 format=3 uid="uid://chat_panel_001"]

[ext_resource type="Script" path="res://view/hud/chat/chat_panel.gd" id="1_chat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chat_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ChatPanel" type="PanelContainer"]
offset_left = 10.0
offset_top = 300.0
offset_right = 510.0
offset_bottom = 700.0
theme_override_styles/panel = SubResource("StyleBoxFlat_chat_panel")
script = ExtResource("1_chat")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ChannelLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Channel: #cityvote"

[node name="ConnectButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Connect"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="MessageContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="InputContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MessageInput" type="LineEdit" parent="MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
placeholder_text = "Type your message..."
editable = false
context_menu_enabled = false
caret_blink = true

[node name="SendButton" type="Button" parent="MarginContainer/VBoxContainer/InputContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
disabled = true
text = "Send"
